updated view to play some animation in battery save mode as well, not as smooth as the object animator but acceptable

--- a/equalizerview/src/main/res/values/attrs.xml
+++ b/equalizerview/src/main/res/values/attrs.xml
@@ -11,6 +11,8 @@
 
         <attr name="animationDuration" format="integer" />
         <attr name="animationValueCount" format="integer" />
+
+        <attr name="runInBatterySaveMode" format="boolean" />
     </declare-styleable>
 
 </resources>
